STORY-24: Notifications Backend
